# evm-bridge-canister

./: Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json  package-lock.json  package.json  webpack.config.js
contracts/: Example.sol
src/evm_bridge_canister_backend/: Cargo.toml  evm_bridge_canister_backend.did
src/evm_bridge_canister_backend/src/: bridge_types.rs  ecdsa.rs  eth_rpc_data.rs  functions.rs  icp_contract.json  lib.rs  state.rs  transaction.rs  utils.rs
src/evm_bridge_canister_frontend/src/: index.html  index.js
