[package]
name = "evm_bridge_canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10"
candid = "0.9"
serde = {version = "1", features = ["derive"]}
primitive-types = { version = "0.12.1", default-features = false, features = ["byteorder", "rustc-hex"] }
ethereum-rlp = "0.2.3"
easy-hasher = "2.2.1"
libsecp256k1 = { version = "0.6.0", package = "libsecp256k1", default-features = false, features = ["lazy-static-context"] }
futures = "0.3.25"
ic-stable-structures = "0.6.2"
cketh-common = { git = "https://github.com/dfinity/ic", rev = "8511846fb6352a0a4f9abae1a8fc8569aeba5f10", package = "ic-cketh-minter" }
getrandom = { version = "0.2", features = ["custom"] }
[dev-dependencies]
libsecp256k1_test = { version = "0.5.0", package = "libsecp256k1" }
